--- a/mac/DmTraceViewer/Base.lproj/Document.xib
+++ b/mac/DmTraceViewer/Base.lproj/Document.xib
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="Document">
             <connections>
                 <outlet property="mDetailView" destination="er3-RN-Mhx" id="LbL-HU-h8v"/>
+                <outlet property="mThreadLabelView" destination="AHa-mn-Wpm" id="0bh-Py-HB5"/>
+                <outlet property="mTimeLineView" destination="OUd-2p-AFA" id="xpd-fX-f1J"/>
+                <outlet property="mTimeScaleView" destination="FhE-ek-e1X" id="sG2-Aq-KUu"/>
                 <outlet property="window" destination="xOd-HO-29H" id="JIz-fz-R2o"/>
             </connections>
         </customObject>
@@ -59,7 +62,7 @@
                                                     <rect key="frame" x="1" y="80" width="166" height="15"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </scroller>
-                                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Tkt-8r-TJW">
+                                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="0.99750623441396513" horizontal="NO" id="Tkt-8r-TJW">
                                                     <rect key="frame" x="167" y="1" width="15" height="79"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </scroller>
@@ -84,7 +87,6 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="59R-JB-bMe" viewBased="YES" id="er3-RN-Mhx">
-                                            <rect key="frame" x="0.0" y="0.0" width="1096" height="0.0"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
